Fix spacing

--- a/src/components/form/FieldTemplate.module.scss
+++ b/src/components/form/FieldTemplate.module.scss
@@ -34,6 +34,7 @@
   flex-grow: 1;
   min-width: 150px;
   max-width: 300px;
+  padding-block: 15px;
 }
 
 .labelWider {
